jj/TODO
Fails to build:

   Compiling pest_derive v2.7.15
error[E0432]: unresolved import `internal`
  --> /scratch/devel/jj/work/vendor/mac_address-1.1.7/src/iter/mod.rs:16:9
   |
16 | pub use internal::MacAddressIterator;
   |         ^^^^^^^^ use of undeclared crate or module `internal`

error[E0433]: failed to resolve: use of undeclared crate or module `os`
   --> /scratch/devel/jj/work/vendor/mac_address-1.1.7/src/lib.rs:120:17
    |
120 |     let bytes = os::get_mac(None)?;
    |                 ^^ use of undeclared crate or module `os`

error[E0433]: failed to resolve: use of undeclared crate or module `os`
   --> /scratch/devel/jj/work/vendor/mac_address-1.1.7/src/lib.rs:129:17
    |
129 |     let bytes = os::get_mac(Some(name))?;
    |                 ^^ use of undeclared crate or module `os`

error[E0433]: failed to resolve: use of undeclared crate or module `os`
   --> /scratch/devel/jj/work/vendor/mac_address-1.1.7/src/lib.rs:136:5
    |
136 |     os::get_ifname(&mac.bytes)
    |     ^^ use of undeclared crate or module `os`

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
error: could not compile `mac_address` (lib) due to 4 previous errors
warning: build failed, waiting for other jobs to finish...
*** Error code 101
